@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <meta name="GENERATOR" content="Mozilla/4.72 [en] (X11; I; Linux 2.2.14 i686) [Netscape]">
+   <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.0 i686) [Netscape]">
    <title>The Official FelineVWM Homepage - Cats</title>
 </head>
 <body text="#FFFFFF" bgcolor="#000000" link="#FFFF88" vlink="#EEDDDD" alink="#FF0000" background="black-stone1_paws.jpg">
@@ -18,7 +18,6 @@ have done without the paws. If your pet ever walked straight over your
 keyboard, chased your mouse pointer (yes, I know cats are supposed to catch
 mice, but still...) or fell asleep on your trackball you know what I mean.
 ^_^
-
 <p>
 <hr WIDTH="90%">
 <p><font size=+2>Dominik's cats:</font>
@@ -50,11 +49,12 @@ that loves piddling on my bed and sofa. I have to find a better photograph.
 we tested when Tilion would stop feeding, but had to break off the experiment
 when we ran out of cat food.
 <p><b><tt><font color="#FF0000"><font size=+2>Geoffrey and Pepper</font></font></tt></b>
-<br>male, * 1988, Pepper missing for years now (picture of Geoffrey below)
+<br>male, * 1988, Pepper missing for years now (picture of Geoffrey below),
+Geoffrey was put to sleep on 26th of November 2001
 <br><img SRC="geoffrey.jpg" VSPACE=2 BORDER=3 height=486 width=693 align=TEXTTOP>
 <br>Two big black tomcats with a few white patches on the belly. Most of
 the time when not feeding or sleeping they stray around the neighbourhood.
-Geoffrey is the terror of the cats in the area. I had to leave him behind
+Geoffrey was the terror of the cats in the area. I had to leave him behind
 when I moved to Althengstett.
 <p><b><tt><font color="#FF0000"><font size=+2>Blacky and Tiger</font></font></tt></b>
 <br>female and male, * 1980, Tiger was given away when he was one and a
@@ -65,7 +65,6 @@ in the lap of our visitors (we never forgave our parents). Have you seen
 his ears? Perhaps we had better called him 'Radar'. Blacky was a great
 hunter and the most undemanding cat we had. She suffered terribly when
 she was shot before the doctor put her to sleep.
-
 <p>
 <hr WIDTH="90%">
 <p><font size=+2>Dan's cat:</font>
@@ -75,7 +74,6 @@ life. To save our furniture Angel's front claws are removed. I believe,
 as a direct consequence, she's one of the most dangerous cats I've encountered.
 Thats right, watch out for this cat, she bites, hard.
 <br><img SRC="angel_resting.jpg" VSPACE=2 BORDER=3 height=416 width=488>
-
 <p>
 <hr WIDTH="90%">
 <p><font size=+2>Hippo's cats:</font>
@@ -95,46 +93,44 @@ the travel bug and spends her time testing the sofa for long term comfort.
 <br>A strange looking cat with a taste for grass, carrots, bananas and
 blackcurrant juice.
 <br><img SRC="boris.jpg" VSPACE=2 BORDER=3 height=414 width=259>
-
 <p>
 <hr WIDTH="90%">
 <p><font size=+2>Bob's cat:</font>
 <p><b><tt><font color="#FF0000"><font size=+2>Tiny</font></font></tt></b>
 <br>A playful lynx-point Siamese, she probably understands more about the
 FVWM code than I do by now.
-<table BORDER=0>
+<table BORDER=0 >
 <tr VALIGN=CENTER>
 <td ALIGN=LEFT>
 <br><img SRC="tiny01b.jpg" VSPACE=2 BORDER=3 height=553 width=509></td>
+
 <td ALIGN=LEFT>The only problem is getting her to stop typing while I'm
 trying to type. (Like I said, she's <i>playful.</i>)</td>
 </tr>
 </table>
 One of these days, I'll try to get a picture of her in a debugging session,
 and a picture of her sister.
-
 <p>
 <hr WIDTH="90%">
 <p><font size=+2>Mikhael's cats:</font>
 <p><b><tt><font color="#FF0000"><font size=+2>Murzilka</font></font></tt></b>
 <br>(short name: Murzya), a lovely kitty, from May 1999. When she was smaller,
 she loved to play with a mouse pointer and watch dynamic screensavers.
-Loves sleeping on the monitor with the tail falling onto the display.
-Can't bear washing.
+Loves sleeping on the monitor with the tail falling onto the display. Can't
+bear washing.
 <br><img SRC="murzilka.jpg" VSPACE=2 BORDER=3 height=429 width=525>
 <p><b><tt><font color="#FF0000"><font size=+2>Cassy</font></font></tt></b>
 <br>(full name: Cassandra), from Oct 2000. Sometimes a full opposite to
 Murzilka, dominating, highly sociable, lap cat, fearless, loves to stay
 on two back legs and play non-stop with toys.
 <br><img SRC="cassy.jpg" VSPACE=2 BORDER=3 height=378 width=523>
-
 <p>
 <hr WIDTH="90%">
 <p><font size=+2>Olivier's cat:</font>
 <p><b><tt><font color="#FF0000"><font size=+2>Lili</font></font></tt></b>
 <br>A sweet and emotional cat, from September 1992. She does not like especially
 computers except when she wants her diner!
-<table BORDER=0>
+<table BORDER=0 >
 <tr VALIGN=CENTER>
 <td ALIGN=LEFT>
 <br><img SRC="lili.jpg" VSPACE=2 BORDER=3 height=280 width=400></td>
@@ -152,7 +148,6 @@ from a programmer, and a math loving wife. Blaise is in her usual spot
 waiting for dinner, she is good at telling time her clock is just an hour
 fast.
 <br><img SRC="blaise.jpg" VSPACE=2 BORDER=3 height=240 width=320>
-
 <p>
 <hr WIDTH="90%">
 <p><font color="#33FF33"><font size=+2>What we love about our cats:</font></font>
@@ -211,9 +206,7 @@ keyboard, NOW!"</li>
 "Mrkgnaow!" - Tiny (who read a lot of James Joyce as an undergraduate)</li>
 
 <li>
-"I hate cats!"
-</li>
-
+"I hate cats!"</li>
 </ul>
 
 <hr WIDTH="90%">
