@@ -1,3 +1,8 @@
+2001-11-27  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm-cats/index.html:
+	no comment
+
 2001-11-21  Dan Espen  <dane@mk.telcordia.com>
 
 	* screenshots/index.html: Screenshot, fvwm2rc from Filip Hroch.
